@@ -43,6 +43,14 @@ extern char *extraflags;
 extern BOOL IsService;
 void CleanUp(void);
 
+/* crappy, but safe :p */
+typedef BOOL (WINAPI *MINIDUMPWRITEDUMP)(HANDLE hProcess, DWORD dwPid, HANDLE hFile, MINIDUMP_TYPE DumpType,
+										CONST PMINIDUMP_EXCEPTION_INFORMATION ExceptionParam,
+										CONST PMINIDUMP_USER_STREAM_INFORMATION UserStreamParam,
+										CONST PMINIDUMP_CALLBACK_INFORMATION CallbackParam
+										);
+
+
 /* Runs a stack trace 
  * Parameters:
  *  e - The exception information
@@ -197,9 +205,13 @@ __inline char *GetException(DWORD code)
 LONG __stdcall ExceptionFilter(EXCEPTION_POINTERS *e) 
 {
 	MEMORYSTATUS memStats;
-	char file[512], text[1024];
+	char file[512], text[1024], minidumpf[512];
 	FILE *fd;
 	time_t timet = time(NULL);
+#ifndef NOMINIDUMP
+	HANDLE hDump;
+	HMODULE hDll = NULL;
+#endif
 
 	sprintf(file, "wircd.%d.core", getpid());
 	fd = fopen(file, "w");
@@ -221,9 +233,53 @@ LONG __stdcall ExceptionFilter(EXCEPTION_POINTERS *e)
 
 	sprintf(text, "UnrealIRCd has encountered a fatal error. Debugging information has"
 		      " been dumped to wircd.%d.core, please email this file to "
-		      "coders@lists.unrealircd.org.", getpid());
+		      "coders@lists.unrealircd.org", getpid());
 	fclose(fd);
 
+#ifndef NOMINIDUMP
+	hDll = LoadLibrary("DBGHELP.DLL");
+	if (hDll)
+	{
+		MINIDUMPWRITEDUMP pDump = (MINIDUMPWRITEDUMP)GetProcAddress(hDll, "MiniDumpWriteDump");
+		if (pDump)
+		{
+			MINIDUMP_EXCEPTION_INFORMATION ExInfo;
+			sprintf(minidumpf, "wircd.%d.mdmp", getpid());
+			hDump = CreateFile(minidumpf, GENERIC_WRITE, FILE_SHARE_WRITE, NULL, CREATE_ALWAYS, FILE_ATTRIBUTE_NORMAL, NULL);
+			if (hDump != INVALID_HANDLE_VALUE)
+			{
+				ExInfo.ThreadId = GetCurrentThreadId();
+				ExInfo.ExceptionPointers = e;
+				ExInfo.ClientPointers = 0;
+
+				if (pDump(GetCurrentProcess(), GetCurrentProcessId(), hDump, MiniDumpNormal, &ExInfo, NULL, NULL))
+				{
+					sprintf(text, "UnrealIRCd has encountered a fatal error. Debugging information has"
+						" been dumped to wircd.%d.core and %s, please email those 2 files to coders@lists.unrealircd.org",
+						getpid(), minidumpf);
+				}
+				CloseHandle(hDump);
+			}
+#if 0
+			sprintf(minidumpf, "wircd.%d.full.mdmp", getpid());
+			hDump = CreateFile(minidumpf, GENERIC_WRITE, FILE_SHARE_WRITE, NULL, CREATE_ALWAYS, FILE_ATTRIBUTE_NORMAL, NULL);
+			if (hDump != INVALID_HANDLE_VALUE)
+			{
+				ExInfo.ThreadId = GetCurrentThreadId();
+				ExInfo.ExceptionPointers = e;
+				ExInfo.ClientPointers = 0;
+
+				if (pDump(GetCurrentProcess(), GetCurrentProcessId(), hDump, MiniDumpWithFullMemory, &ExInfo, NULL, NULL))
+				{
+					strcat(text, " [extended debuginfo is available too]");
+				}
+				CloseHandle(hDump);
+			}
+#endif
+		}
+	}
+#endif
+	
 	if (!IsService)
 		MessageBox(NULL, text, "Fatal Error", MB_OK);
 	else 
