@@ -90,6 +90,7 @@ Source: "c:\dev\curl\lib\libcurl.dll"; DestDir: "{app}"; Flags: ignoreversion
 #endif
 #endif
 Source: isxdl.dll; DestDir: {tmp}; Flags: dontcopy
+Source: "..\..\dbghelp.dll"; DestDir: "{app}"; Flags: ignoreversion
 
 [Dirs]
 Name: "{app}\tmp"
@@ -115,10 +116,10 @@ hWnd,answer: Integer;
 begin
 
     if ((CurPage = wpReady)) then begin
-      dbghelp := ExpandConstant('{sys}\DbgHelp.Dll');
-      output := ExpandConstant('{app}\DbgHelp.Dll');
+//      dbghelp := ExpandConstant('{sys}\DbgHelp.Dll');
+//      output := ExpandConstant('{app}\DbgHelp.Dll');
       msvcrt := ExpandConstant('{sys}\msvcr70.Dll');
-      GetVersionNumbersString(dbghelp,m);
+//      GetVersionNumbersString(dbghelp,m);
     if (NOT FileExists(msvcrt)) then begin
       answer := MsgBox('Unreal requires the MS C Runtime 7.0 in order to run, do you wish to install it now?', mbConfirmation, MB_YESNO);
       if answer = IDYES then begin
@@ -132,24 +133,24 @@ begin
       end else
         MsgBox('In order for Unreal to properly function, you must manually install msvcr70.dll. The dll can be downloaded from http://www.unrealircd.com/downloads/msvcr70.dll', mbInformation, MB_OK);
     end;
-    if (NOT FileExists(output)) then begin
-          if (NOT FileExists(dbghelp)) then
-        m := StringOfChar('0',1);
-      if (StrToInt(m[1]) < 5) then begin
-        answer := MsgBox('DbgHelp.dll version 5.0 or higher is required to install Unreal, do you wish to install it now?', mbConfirmation, MB_YESNO);
-        if answer = IDYES then begin
-          tmp := ExpandConstant('{tmp}\dbghelp.dll');
-          isxdl_SetOption('title', 'Downloading DbgHelp.dll');
-          hWnd := StrToInt(ExpandConstant('{wizardhwnd}'));
-          if isxdl_Download(hWnd, dbgurl, tmp) = 0 then begin
-            MsgBox('Download and installation of DbgHelp.Dll failed, the file must be manually installed. The file can be downloaded at http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
-          end else
-            didDbgDl := true;
-        end else
-        MsgBox('In order for Unreal to properly function you must manually install dbghelp.dll. The dll can be downloaded from http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
-      end;
-    end;
-  end;
+//    if (NOT FileExists(output)) then begin
+//          if (NOT FileExists(dbghelp)) then
+//        m := StringOfChar('0',1);
+//      if (StrToInt(m[1]) < 5) then begin
+//        answer := MsgBox('DbgHelp.dll version 5.0 or higher is required to install Unreal, do you wish to install it now?', mbConfirmation, MB_YESNO);
+//        if answer = IDYES then begin
+//          tmp := ExpandConstant('{tmp}\dbghelp.dll');
+//          isxdl_SetOption('title', 'Downloading DbgHelp.dll');
+//          hWnd := StrToInt(ExpandConstant('{wizardhwnd}'));
+//          if isxdl_Download(hWnd, dbgurl, tmp) = 0 then begin
+//            MsgBox('Download and installation of DbgHelp.Dll failed, the file must be manually installed. The file can be downloaded at http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
+//          end else
+//            didDbgDl := true;
+//        end else
+//        MsgBox('In order for Unreal to properly function you must manually install dbghelp.dll. The dll can be downloaded from http://www.unrealircd.com/downloads/DbgHelp.Dll', mbInformation, MB_OK);
+//      end;
+//    end;
+//  end;
   Result := true;
 end;
 
