@@ -1093,3 +1093,4 @@
   Naturally this change will be mentioned clearly in next release notes.
 - Fixed (unimportant) DNS resolver problem if using some LAN domains with digits at end,
   reported by Bock (#0002843).
+- Added minidump support for crashes to aid debugging a bit.
